--- a/examples/step-57/doc/intro.dox
+++ b/examples/step-57/doc/intro.dox
@@ -6,12 +6,13 @@
 
 <h3> Navier Stokes Equations </h3>
 
-In this tutorial, we show how to solve Navier Stokes equations(NSE) by
-Newton's method. Here we consider the viscous flows to be steady and
-incompressible. If a domain $\Omega \in \mathbb{R}^{d}$, $d=2,3$,
-containing piecewise smooth boundary $\partial \Omega$, and a force
-field $\textbf{f}$ are given, we seek for a velocity field
-$\textbf{u}$ and a pressure field $\textbf{p}$ satisfying
+In this tutorial, we show how to solve the incompressible Navier
+Stokes equations(NSE) by Newton's method. Here we consider the viscous
+flows to be steady and incompressible. If a domain $\Omega \in
+\mathbb{R}^{d}$, $d=2,3$, containing piecewise smooth boundary
+$\partial \Omega$, and a force field $\textbf{f}$ are given, we seek
+for a velocity field $\textbf{u}$ and a pressure field $\textbf{p}$
+satisfying
 
 @f{eqnarray*}
 - \nu \Delta\textbf{u} + (\textbf{u} \cdot \nabla)\textbf{u} + \nabla p &=& \textbf{f}\\
@@ -19,14 +20,17 @@ $\textbf{u}$ and a pressure field $\textbf{p}$ satisfying
 - \nabla \cdot \textbf{u} &=& 0
 @f}
 
-Different from Stokes equations, NSE is a nonlinear system because of
-the convection term $(\textbf{u} \cdot \nabla)\textbf{u}$. The first
-step to compute its numerical solution is linearization of NSE and
-this will be done through Newton's method.
+Different from Stokes equations,as discussed in step-22 NSE is a
+nonlinear system because of the convective term $(\textbf{u} \cdot
+\nabla)\textbf{u}$. The first step to compute its numerical solution
+is linearization of NSE and this will be done using Newton's method. A
+time-dependent problem is discussed in step-35, which linearize NSE
+using time nodes. Therefore, NSE can be linearized by treating the
+convective term semi-explicitly.
 
 <h3> Linearization of Navier Stokes Equations </h3>
 
-Moving the right hand side terms to the left, we rewrite NSE as
+Moving the right hand side terms to the left, we rewrite the NSE as
 
 @f{eqnarray*}
 F(\mathbf{u}, p) = \left(
@@ -38,14 +42,16 @@ F(\mathbf{u}, p) = \left(
 @f}
 
 $F(\textbf{u}, p)$ is a nonlinear function whose root is the same as
-the solution to NSE. Assuming the convergence condition is satisfied
-and denoting $\textbf{x} = (\textbf{u}, p)$, Newton's iteration on a
-vector field can be defined as
-@f{eqnarray*}
-\textbf{x}^{k+1} = \textbf{x}^{k} - (\nabla F(\textbf{x}^{k}))^{-1} F(\textbf{x}^{k}),
+the solution to the NSE. Assuming the initial guess is good enough to
+guarantee the convergence of Newton's iteraton and denoting
+$\textbf{x} = (\textbf{u}, p)$, Newton's iteration on a vector field
+can be defined as
+@f{eqnarray*} \textbf{x}^{k+1} = \textbf{x}^{k} -
+(\nabla F(\textbf{x}^{k}))^{-1} F(\textbf{x}^{k}),
 @f}
-where $\textbf{x}^{k+1}$ is what we are computing at current step and
-$\textbf{x}^{k}$ represents the solution from last step, and $\nabla
+where
+$\textbf{x}^{k+1}$ is the approximation solution in step k+1 and
+$\textbf{x}^{k}$ represents the solution from the last step, and $\nabla
 F(\textbf{x}^{k})$ is the Jacobian matrix evaluated at
 $\textbf{x}^{k}$.
 
@@ -55,8 +61,9 @@ of evaluating the Jacobian matrix and taking its inverse, we consider
 the update term as a whole, that is
 
 @f{eqnarray*}
-\delta \textbf{x}^{k} = - (\nabla F(\textbf{x}^{k}))^{-1} F(\textbf{x}^{k}).
+\delta \textbf{x}^{k} = - (\nabla F(\textbf{x}^{k}))^{-1} F(\textbf{x}^{k}),
 @f}
+where $x^{k+1}=x^{k}+\delta x^{k}$.
 
 Next, we solve the system
 @f{eqnarray*}
@@ -65,7 +72,7 @@ Next, we solve the system
 for the update term $\delta \textbf{x}^{k}$. On the left of the
 previous equation, $\nabla F(\textbf{x}^{k})$ represents the
 directional gradient of $F(\textbf{x})$ along $\delta
-\textbf{x}^{k}$. By definition, the directional gradient shows as
+\textbf{x}^{k}$. By definition, the directional gradient is given by
 
 @f{eqnarray*}
   & &\nabla F(\mathbf{u}^{k}, p^{k}) (\delta \mathbf{u}^{k}, \delta p^{k}) \\
@@ -75,14 +82,14 @@ directional gradient of $F(\textbf{x})$ along $\delta
   &=& \lim_{\epsilon \to 0} \frac{1}{\epsilon} \left(
                 \begin{array}{c}
                   - \epsilon\nu\Delta\delta \mathbf{u}^{k} + \epsilon\mathbf{u}^{k}\cdot\nabla\delta\mathbf{u}^{k}+\epsilon\delta\mathbf{u}^{k}\cdot\nabla\mathbf{u}^{k}+\epsilon^{2}\delta\mathbf{u}^{k}\cdot\nabla\delta\mathbf{u}^{k}+\epsilon \nabla\delta p^{k}\\
-                  - \epsilon \Delta \cdot\delta \mathbf{u}^{k}\\
+                  - \epsilon \nabla \cdot\delta \mathbf{u}^{k}\\
                 \end{array}
               \right)\\
               \\
   &=& \left(
                 \begin{array}{c}
                   - \nu\Delta\delta \mathbf{u}^{k} + \mathbf{u}^{k}\cdot\nabla\delta\mathbf{u}^{k}+\delta\mathbf{u}^{k}\cdot\nabla\mathbf{u}^{k}+ \nabla\delta p^{k}\\
-                  - \Delta \cdot\delta \mathbf{u}^{k}\\
+                  - \nabla \cdot\delta \mathbf{u}^{k}\\
                 \end{array}
               \right).
 @f}
@@ -90,19 +97,20 @@ Then we have a linearized system
 
 @f{eqnarray*}
 - \nu\Delta\delta\mathbf{u}^{k} + \mathbf{u}^{k}\cdot\nabla\delta\mathbf{u}^{k}+\delta\mathbf{u}^{k}\cdot\nabla\mathbf{u}^{k}+ \nabla\delta p^{k} = \mathbf{g}, \\
-- \Delta \cdot\delta \mathbf{u}^{k} = 0,
+- \nabla \cdot\delta \mathbf{u}^{k} = \nabla\codt\mathbf{u}^{k},
 @f}
 
 where $\textbf{g} =\textbf{f}+\nu \Delta\textbf{u}^k -(\textbf{u}^k
 \cdot \nabla)\textbf{u}^k -\nabla p^k$, $\textbf{f}$ is the right hand
-side of NSE, $\textbf{u}^k$ and $p^k$ are the solutions from previous
-Newton's iteration. In this linear system, the only unknowns are the
+side of NSE, $\textbf{u}^k$ and $p^k$ are the solutions from the
+previous iteration. Since the velocity is divergence free, we set the
+pressure right hand side, that is $\nabla\cdot\mathbf{u}^{k}$, to be
+zero in practice. In this linear system, the only unknowns are the
 update terms: $\delta \textbf{u}^{k}$ and $\delta p^{k}$, then the
-strategy we use in step-22 can be used to solve it. After multiplied
-by sharp functions and integrating by parts, similarly, the system
-results in solving a linear system formed as $Ax = b$.
+strategy we use in step-22 can be used to solve it. The weak form is
+derived like it is done in step-22.
 
-Now, Newton's iteration for solving NSE shows as
+Now, Newton's iteration for solving the NSE is:
 
 <ol>
   <li> Initialization: Initial guess $u_0$ and $p_0$, tolerance $\tau$;
@@ -113,68 +121,49 @@ Now, Newton's iteration for solving NSE shows as
        If $E^{k+1} > \tau$, back to step 2. 
 </ol>
 
-<h3> Initial Guess in Newton's Scheme </h3>
+<h3> Finding an Initial Guess </h3>
 
-Newton's iteration is available only if the initial guess is close
-enough to the exact solution so the first step in Newton's iteration
-is to determine the initial guess.
+For Newton's method to converge, the initial guess needs to be close
+enough to the solution, so it is crucial to find a good starting value.
 
-Here we assume the fluid is steady. On the condition of viscous fluid,
-such as honey and mantle, the viscosity coefficient $\nu$ is
-relatively large(like one), the linear term is dominant. In this
-situation we can start with the corresponding Stokes equations and use
-its solution as the initial guess in Newton's iteration. If $/nu$ is
-small, which means the fluid is running fast such that inertia forces
-turns to be significent, the convection term $(\textbf{u} \cdot
-\nabla)\textbf{u}$ is dominant. Now the solution to its corresponding
-Stokes problem is far away from what we are seeking for. Therefore, we
-create a "staircase" to lead us a way from Stokes equations to Navier
-Stokes equastons.
+While the viscosity $\nu$ is large, 1/400 in test case 1, we set the
+initial guess to be the solution to the Stokes equation with viscosity
+$\nu$. However, it convective term $(\mathbf{u}\cdot\nabla)\mathbf{u}$
+gets to be donimant if viscosity is small, like 1/10000 in test case
+2. In this situation, we have to set up a series of auxiliary NSE with
+viscosity aprroaching to the one in the target NSE. We set a sequence
+$\{\nu_{i}\}$ with $\nu_{n}\= \nu$. The solution to
+the NSE with $\nu_{i}$ as viscosity is the initial guess of the NSE
+with $\nu_{i+1}$. It is like a staircase from Stokes equations to the
+NSE we want to solve. 
 
-Accept a fact that the solutions to two Navier Stokes problems are
-closed if the difference between their viscosity coefficients is
-small. We start with Stokes problem whose $\nu$ is as small as
-possible and solution is good enough to be the initial guess for
-corresponding NSE. And then we decrease $\nu$ by $\epsilon$ and make
-sure $\epsilon$ is small enough such that the solution to NSE with
-$\nu$ can be an initial guess for NSE with $\nu - \epsilon$.  That is
-we use the solution to
-
+That is we first solve
 @f{eqnarray*}
-- \nu^{*} \Delta\textbf{u} + \nabla p &=& \textbf{f}\\
+- \nu_{1} \Delta\textbf{u} + \nabla p &=& \textbf{f}\\
 
 - \nabla \cdot \textbf{u} &=& 0
 @f}
 
-as the initial guess in Newton's iteration for solving
+to get the initial guess for
 
 @f{eqnarray*}
-- \nu^{*} \Delta\textbf{u} + (\textbf{u} \cdot \nabla)\textbf{u} + \nabla p &=& \textbf{f},\\
+- \nu_{1} \Delta\textbf{u} + (\textbf{u} \cdot \nabla)\textbf{u} + \nabla p &=& \textbf{f},\\
 
 - \nabla \cdot \textbf{u} &=& 0.
 @f}
-And then the solution to previous NSE behaves as the initial guess for 
+And then the solution to
 @f{eqnarray*}
-- (\nu^{*}-\epsilon) \Delta\textbf{u} + (\textbf{u} \cdot \nabla)\textbf{u} + \nabla p &=& \textbf{f}\\
-
+- \nu_{i} \Delta\textbf{u} + (\textbf{u} \cdot \nabla)\textbf{u} + \nabla p &=& \textbf{f}\\
+- \nabla \cdot \textbf{u} &=& 0.
+@f}
+acts as the initial guess for
+@f{eqnarray*}
+- \nu_{i+1} \Delta\textbf{u} + (\textbf{u} \cdot \nabla)\textbf{u} + \nabla p &=& \textbf{f}\\
 - \nabla \cdot \textbf{u} &=& 0.
 @f}
 
-Denoting the initial viscosity to be $\nu^{*}$ and repeating this
-process, we build a series of auxiliary NSE with viscosity from
-$\nu^{*}$ to $\nu$ with step size $\epsilon$, that is let $\nu^*
-\rightarrow \nu$. The solution to the NSE on last stair is the initial
-guess for the NSE we want to solve.
-
-The algorithm of searching initial guess is listed as following
-
-
-- Step 1. Determine $\nu^{*}$ and solve Stokes equations with viscosity $\nu{*}$, and set its solution to be the initial guess for NSE with viscosity $\nu^{*}$;
-- Step 2. Solve NSE with viscosity $\nu^{*}$ and set its solution to be initial guess for next auxiliary NSE;
-- Step 3. For small enough $\epsilon$, solve NSE with viscosity $\nu^{*}=\nu{*}-\epsilon$ by Newton's iteration;
-- Step 4. If $\nu^{*} - \nu$ is small enough, set current solution to be the initial guess for original NSE; else set its solution to be the initial guess for next auxiliary NSE and back to step 3. 
-
-
+We repeat this process till getting the solution to the NSE with viscosity
+$\nu_{n-1}$, then the initial guess for the target NSE is obtained.
 
 <h3>The Solver and Preconditioner </h3>
 
@@ -202,8 +191,8 @@ saddle point systems of the form
     \right).
 @f}
 
-Instead of solving the above system, we in practice focus on the
-equivalent system
+Instead of solving the above system, we can solve the equivalent system
+
 @f{eqnarray*}
     \left(
       \begin{array}{cc}
@@ -223,26 +212,29 @@ equivalent system
         F \\
         0 \\
       \end{array}
-    \right).
+    \right)
 @f}
+with a parameter $\gamma$ and an invertible matrix W.
 
 Denoting the system matrix of the new system by $G$ and right hand
-side by $b$, we solve it with right preconditioner $P$ as $GP^{-1}y =
-b$, where
+side by $b$, we solve it iteratively with right preconditioning
+$P^{-1}$ as $GP^{-1}y = b$, where
 
 @f{eqnarray*}
 P^{-1} = \left(\begin{array}{cc} \tilde{A} & B^T \\ 
                                  0 & \tilde{S} \end{array}\right)^{-1},
 @f}
 
-where $\tilde{A} = A + \gamma B^TW^{-1}B$ and $\tilde{S}$ is the
-corresponding Schur complement $\tilde{S} = B^T \tilde{A}^{-1} B$. As
-discussed in step-22, we let $W = M_p$ where $M_p$ is the pressure
-mass matrix, then $\tilde{S}^{-1}$ can be approximated by
+with $\tilde{A} = A + \gamma B^TW^{-1}B$ and $\tilde{S}$ is the
+corresponding Schur complement $\tilde{S} = B^T \tilde{A}^{-1} B$. we
+let $W = M_p$ where $M_p$ is the pressure mass matrix, then
+$\tilde{S}^{-1}$ can be approximated by
 
 @f{eqnarray*}
-\tilde{S}^{-1} = -(\nu+\gamma)M_p^{-1}.
+\tilde{S}^{-1} \approx -(\nu+\gamma)M_p^{-1}.
 @f}
+See "An Augmented Lagrangian-Based Approach to the Ossen Problem,
+M.Benzi and M.Olshanskii" for details.
 
 We decompose $P^{-1}$ as
 
@@ -253,18 +245,18 @@ P^{-1} =
 \left(\begin{array}{cc} I & 0 \\ 0 & \tilde{S}^{-1} \end{array}\right).
 @f}
 
-Here two inexact solver will be needed for $\tilde{A}^{-1}$ and
-$\tilde{S}^{-1}$(An Augmented Lagrangian-Based Approach to the Ossen
-Problem, M.Benzi and M.Olshanskii). Since the pressure mass matrix is
-diagonal, the solver for $\tilde{S}^{-1}$ is not diffcult and CG with
-ILU as preconditioner is utilized as this solver. We use the direct
-solver UMFPACK for $\tilde{A}^{-1}$. The remaining is sparse
+Here two inexact solvers will be needed for $\tilde{A}^{-1}$ and
+$\tilde{S}^{-1}$. See "An Augmented Lagrangian-Based Approach to the
+Ossen Problem, M.Benzi and M.Olshanskii". Since the pressure mass
+matrix is symmetric, the solver for $\tilde{S}^{-1}$ is not diffcult
+and we can use CG with ILU as preconditionerr. We use the direct
+solver UMFPACK for $\tilde{A}^{-1}$. The remaining is a sparse
 mastrix-vector product with $B^T$. Further more, the augmented
 lagrangian term will be assembled through Grad-Div stabilization:
 $(\nabla \cdot \phi _{j}, \nabla \cdot \phi _{i}) \approx (B^T
-M_p^{-1}B)_{ij}$.(Efficient augmented Lagrangian-type preconditioning
+M_p^{-1}B)_{ij}$. See "Efficient augmented Lagrangian-type preconditioning
 for the Oseen problem using Grad-Div stabilization, Timo Heister and
-Gerd Rapin)
+Gerd Rapin"
 
 
 <h3> Test Case </h3>
@@ -275,34 +267,23 @@ $\|b-Gx\|_2$ will be used to check convergence. The domain of Navier
 Stokes equations is defined on the unit square and the right hand side
 $f=0$. The boundary condition is
 
-@f{eqnarray*}
+@f{eqnarray*} 
 (u(x, y), v(x,y)) &=& (1,0)   
-  \qquad\qquad \textrm{if}\ z=0, x<0, \\
-
+  \qquad\qquad \textrm{if}\ y = 1 \\
   (u(x, y), v(x,y)) &=& (0,0)
   \qquad\qquad \textrm{else}.
 @f}
 
 The error consists of the nonlinear error(from Newton's iteration) and
-the discrete error(depending on mesh size). This means the nonlinear
-error goes small with Newton's iteration processing but the error from
-discretization can be decreased if a mesh is fixed. And the size of
-the linear system we are finally solving depends on the mesh size,
-that is the finer is the mesh, the larger is the system matrix. When
-$/nu$ is small, the "stiarcase" will be very long. Also, we run
-Newton's iteration on each stair which leads plenty of linear system
-to solve. Therefore, we must restrict the mesh on which we search for
-initial guess to be moderate. Here we search for the initial guess on
-a globally refined mesh(8 \times 8 for Re=400 and 32 \times 32 for
-Re=10000). Once the initial guess is obtained, we refine the mesh
-adaptively and transfer the solution to the new mesh as an initial
-guess, and then run Newton's iteration on the new mesh. We repeat this
-approach for 4 times. In this way, we minish both of the nonlinear
-error and the discrete error.
+the discrete error(depending on mesh size). The nonlinear part
+decreases as Newton's iteration implementing and this discrete error
+reduces with mesh refinement. In test case, the solution from the coarse
+mesh is transfered to the refined mesh as an initial guess. Therefore, the
+nonlinear error is always under the tolerance of Neweton's iteraton and
+the discrete error is reduced while the mesh is getting finer. 
 
 Inside the loop, we involve three solvers: one for $\tilde{A}^{-1}$,
-one for $M_p^{-1}$ and one for $Gx=b$. We can see that none of these
-three solvers compute the solution directly. In fact, the first two
+one for $M_p^{-1}$ and one for $Gx=b$. The first two
 solvers are involved in the preconditioner and the third one gives us
 the Newton's update term. Inexact computation for preconditioner
 probably causes the preconditioned system is not as good as we expect,
@@ -311,23 +292,13 @@ a Krylov subspace iterative method, like FGMRES. Therefore, all
 solvers can be inexact, and this implies the whole approach can be
 cheap if we set the tolerance to be moderately high. In test, the
 tolerance of CG is 1e-6 and we set the tolerance of relative residual,
-that is $\frac{\|b-Gx\|_2}{\|b\|_2}$, to be 1e-4. In spite of high
-tolerance, we finally get the residual of 1e-14.
+$\frac{\|b-Gx\|_2}{\|b\|_2}$, to be 1e-4. In spite of high
+tolerance, we finally get the residual of 1e-14. Also, we use a simple line
+search algorithm for globalization of the Newton method.
 
-We modify the weight of the update term to make sure the new solution
-is no worse than the previous one. Given an update vector $\delta
-\textbf{x}^{k}$, we modify its weight(take its half) till the new
-solution gives a smaller residual. The algorithm is shown as below.
-
-<ol>
-  <li> Set initial weight to be one: $\alpha = 1$;
-  <li> Update solution by $\textbf{x}^{k+1} = \textbf{x}^{k} + \alpha \delta \textbf{x}^{k}$;
-  <li> Check residual: if $\|b-G\textbf{x}^{k+1}\| < \|b-G\textbf{x}^{k}\|$, new solution is obtained and stop; else $\alpha = 0.5*\alpha$ and back to step 2.
-</ol>
-
-All cavity reference values are from High-Re solution for
+All cavity reference values are from "High-Re solution for
 incompreesible flow using the Navier-Stokes Equations and a Multigrid
-Method, U.Ghia, K.N.Ghia, and C.T.Shin.
+Method, U.Ghia, K.N.Ghia, and C.T.Shin".
 
 
 
