--- a/examples/step-57/doc/intro.dox
+++ b/examples/step-57/doc/intro.dox
@@ -8,10 +8,10 @@
 
 In this tutorial, we show how to solve the incompressible Navier
 Stokes equations(NSE) by Newton's method. Here we consider the viscous
-flows to be steady and incompressible. If a domain $\Omega \in
+flows to be steady and incompressible. If a domain $\Omega \subset
 \mathbb{R}^{d}$, $d=2,3$, containing piecewise smooth boundary
 $\partial \Omega$, and a force field $\textbf{f}$ are given, we seek
-for a velocity field $\textbf{u}$ and a pressure field $\textbf{p}$
+a velocity field $\textbf{u}$ and a pressure field $\textbf{p}$
 satisfying
 
 @f{eqnarray*}
@@ -19,7 +19,7 @@ satisfying
 - \nabla \cdot \textbf{u} &=& 0
 @f}
 
-Different from Stokes equations,as discussed in step-22 NSE is a
+Different from the Stokes equations, as discussed in step-22 the NSE are a
 nonlinear system because of the convective term $(\textbf{u} \cdot
 \nabla)\textbf{u}$. The first step to compute its numerical solution
 is linearization of NSE and this will be done using Newton's method. A
@@ -39,7 +39,7 @@ F(\mathbf{u}, p) = \left(
               \right).
 @f}
 
-$F(\textbf{u}, p)$ is a nonlinear function whose root is the same as
+$F(\textbf{u}, p)$ is a nonlinear function whose root is 
 the solution to the NSE. Assuming the initial guess is good enough to
 guarantee the convergence of Newton's iteraton and denoting
 $\textbf{x} = (\textbf{u}, p)$, Newton's iteration on a vector field
@@ -53,7 +53,7 @@ $\textbf{x}^{k}$ represents the solution from the last step, and $\nabla
 F(\textbf{x}^{k})$ is the Jacobian matrix evaluated at
 $\textbf{x}^{k}$.
 
-From the Newton's iteration formula, we can observe that the new
+From Newton's iteration formula, we can observe that the new
 solution is obtained by adding an update term to the old one. Instead
 of evaluating the Jacobian matrix and taking its inverse, we consider
 the update term as a whole, that is
@@ -100,7 +100,7 @@ Then we have a linearized system
 
 where $\textbf{g} =\textbf{f}+\nu \Delta\textbf{u}^k -(\textbf{u}^k
 \cdot \nabla)\textbf{u}^k -\nabla p^k$, $\textbf{f}$ is the right hand
-side of NSE, $\textbf{u}^k$ and $p^k$ are the solutions from the
+side of the NSE (the body force), $\textbf{u}^k$ and $p^k$ are the solutions from the
 previous iteration. In this linear system, the only unknowns are the
 update terms: $\delta \textbf{u}^{k}$ and $\delta p^{k}$, then the
 strategy we use in step-22 can be used to solve it. The weak form is
@@ -127,8 +127,8 @@ initial guess to be the solution to the Stokes equation with viscosity
 $\nu$. For what value of $\nu$ is large, this can only be determined via numerical experiment. In this tutorial, we accept that the solution to Stokes problem is a 
 good initial guess if the visociy of NSE is 1/1000, and this is what we do at the first step while finding an initial guess if viscosity is small. 
 
-However, it convective term $(\mathbf{u}\cdot\nabla)\mathbf{u}$
-gets to be donimant if viscosity is small, like 1/10000 in test case 2. 
+However, the convective term $(\mathbf{u}\cdot\nabla)\mathbf{u}$
+will be donimant if viscosity is small, like 1/10000 in test case 2. 
 In this situation, we have to set up a series of auxiliary NSE with
 viscosity aprroaching to the one in the target NSE. Correspondingly, we set a sequence
 $\{\nu_{i}\}$ with $\nu_{n}= \nu$, and accept that the solutions to two 
